--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="d-flex flex-column flex-root"></div>
     <div id="splash-screen" class="splash-screen">
-      <img src="%PUBLIC_URL%/media/logos/logo-2.svg" alt="Metronic logo" class="h-30px" />
+      <img src="%PUBLIC_URL%/media/logos/logo.png" width="100" height="100" alt=" logo" />
       <span>Loading ...</span>
     </div>
     <div id="root-modals"></div>
