--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <link href="//fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" />
     <!-- SPLASH SCREEN-->
     <link rel="stylesheet" id="layout-styles-anchor" href="%PUBLIC_URL%/splash-screen.css" />
-    <title>Metronic Theme | Keenthemes</title>
+    <title>Batami | web</title>
+    
     <link rel="shortcut icon" href="%PUBLIC_URL%/media/logos/logo.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   </head>
