issues fixes , ltr all labels , validations in hebrew login page , loading page, user details , main attandence

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   </head>
   <!-- TIP: add dark-mode class to enable dark mode -->
-  <body id="kt_body" class="page-loading dark-mode">
+  <body id="kt_body" dir="rtl" class="page-loading dark-mode">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="d-flex flex-column flex-root"></div>
     <div id="splash-screen" class="splash-screen">
       <img src="%PUBLIC_URL%/media/logos/logo.png" width="100" height="100" alt=" logo" />
-      <span>Loading ...</span>
+      <span>דף בטעינה...</span>
     </div>
-    <div id="root-modals"></div>
+    <div dir="rtl" id="root-modals"></div>
   </body>
 </html>
